# rovereye

./: .gitignore  Cargo.toml  README.md  go.sh
src/: bb.rs  error.rs  image.rs  lib.rs  main.rs  stream.rs  video.rs
training/: README.md  pyproject.toml
training/src/training/: augment.py  export.py  train.py
