[package]
name = "rovereye"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "3", features = ["derive"] }
file-format = { version = "0.25.0", features = ["reader-mp4"] }
od_opencv = "0.1.6"
opencv = "0.91.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
